--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.7.7</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 
 	<groupId>moscow.mech</groupId>
@@ -18,8 +18,7 @@
 
 	<properties>
 		<java.version>11</java.version>
-		<kotlin.version>1.3.72</kotlin.version>
-		<jackson.kotlin.version>2.11.1</jackson.kotlin.version>
+		<kotlin.version>1.8.0</kotlin.version>
 	</properties>
 
 	<dependencies>
@@ -31,7 +30,6 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
 			<artifactId>jackson-module-kotlin</artifactId>
-			<version>${jackson.kotlin.version}</version>
 		</dependency>
 
 		<dependency>
@@ -110,5 +108,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
