--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<kotlin.version>1.8.0</kotlin.version>
 		<kotlinx.serialization.version>1.4.1</kotlinx.serialization.version>
 		<jjwt.version>0.9.1</jjwt.version>
+		<swagger.version>3.0.0</swagger.version>
 	</properties>
 
 	<dependencies>
@@ -87,6 +88,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>${swagger.version}</version>
 		</dependency>
 	</dependencies>
 
