--- a/website-config/src/main/resources/website/dc.yml
+++ b/website-config/src/main/resources/website/dc.yml
@@ -1,22 +1,40 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: @deployment.name@
   labels:
-    app:
+    app: @deployment.name@
+  name: @deployment.name@
+  namespace: default
 spec:
+  progressDeadlineSeconds: 600
   replicas: 1
+  revisionHistoryLimit: 10
   selector:
     matchLabels:
       app: @deployment.name@
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       labels:
         app: @deployment.name@
     spec:
       containers:
-        - name: website-back
-          image: luksa/kubia:v1
+        - image: luksa/kubia:v1
+          imagePullPolicy: IfNotPresent
+          name: @deployment.name@
           ports:
             - containerPort: 8080
-            name: @deployment.name@
+              name: website-port
+              protocol: TCP
+          resources: {}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
