--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
 	<packaging>pom</packaging>
 
 	<modules>
-		<module>website-jar</module>
-		<module>website-config</module>
+		<module>cluster-config</module>
+		<module>db-config</module>
 		<module>website-main</module>
-		<module>data-base</module>
+		<module>website-jar</module>
 	</modules>
 
 	<parent>
@@ -25,7 +25,7 @@
 	<description>Moscow Streetwear</description>
 
 	<properties>
-		<deployment.name>website-${project.version}</deployment.name>
+		<deployment.name>website</deployment.name>
 
 		<java.version>11</java.version>
 
