--- a/website-jar/src/main/resources/application.yml
+++ b/website-jar/src/main/resources/application.yml
@@ -4,31 +4,26 @@ server:
 
 spring:
   datasource:
-    url: jdbc:h2:file:${HOME}/Desktop/mech/data-base/src/main/resources/data/test;AUTO_SERVER=true
-    username: sa
-    password: password
-    driverClassName: org.h2.Driver
-
-  sql:
-    init:
-      mode: always
-      schema-locations: classpath:schema.sql
+    url: jdbc:postgresql://${POSTGRES_HOST}:5432/postgres
+    username: ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
+    driverClassName: org.postgresql.Driver
 
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQL10Dialect
     hibernate:
       ddl-auto: none
 
-  h2:
-    console:
-      enabled: true
+  liquibase:
+    change-log: classpath:db/changelog/root.yml
 
   mvc:
     pathmatch:
       matching-strategy: ANT_PATH_MATCHER
 
 jwt:
-  secret: zayanimal
+  secret: ${JWT_SECRET}
 
 logging:
   level:
