--- a/cluster-config/src/main/resources/website/website-cm.yml
+++ b/cluster-config/src/main/resources/website/website-cm.yml
@@ -1,6 +1,6 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: website-cm
+  name: @deployment.name@-cm
 data:
   POSTGRES_HOST: 'db-postgres-0.db-postgres.default.svc.cluster.local'
