--- a/cluster-config/src/main/resources/website/website-dc.yml
+++ b/cluster-config/src/main/resources/website/website-dc.yml
@@ -7,7 +7,7 @@ metadata:
   namespace: default
 spec:
   replicas: 1
-  revisionHistoryLimit: 10
+  revisionHistoryLimit: 5
   selector:
     matchLabels:
       app: @deployment.name@
@@ -24,6 +24,13 @@ spec:
       containers:
         - image: zayanimal/website:v1
           name: @deployment.name@
+          resources:
+            requests:
+              cpu: '200m'
+              memory: '256Mi'
+            limits:
+              cpu: '300m'
+              memory: '512Mi'
           envFrom:
             - configMapRef:
                 name: @deployment.name@-cm
@@ -32,4 +39,3 @@ spec:
           ports:
             - containerPort: 8080
               protocol: TCP
-      restartPolicy: Always
