Сервер API имеет свой неймспейс, добавлен ingress

--- a/cluster-config/src/main/resources/ecommerce/ecommerce-svc.yml
+++ b/cluster-config/src/main/resources/ecommerce/ecommerce-svc.yml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: @deployment.name@
   name: @deployment.name@
+  namespace: @deployment.name@
 spec:
   type: NodePort
   selector:
