--- a/cluster-config/src/main/resources/secrets/secret.yml
+++ b/cluster-config/src/main/resources/secrets/secret.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: secret
+  namespace: @deployment.name@
 data:
   POSTGRES_USER: $(echo -n "postgres" | base64 -w0)
   POSTGRES_PASSWORD: $(echo -n "secret" | base64 -w0)
