--- a/cluster-config/src/main/resources/ecommerce/ecommerce-dc.yml
+++ b/cluster-config/src/main/resources/ecommerce/ecommerce-dc.yml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: @deployment.name@
   name: @deployment.name@
-  namespace: default
+  namespace: @deployment.name@
 spec:
   replicas: 1
   revisionHistoryLimit: 5
