--- a/cluster-config/src/main/resources/postgres/postgres-cm.yml
+++ b/cluster-config/src/main/resources/postgres/postgres-cm.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: db-postgres-cm
+  namespace: @deployment.name@
 data:
   POSTGRES_DB: 'postgres'
   PGDATA: '/var/lib/postgresql/data/pgdata'
