--- a/cluster-config/src/main/resources/postgres/postgres-svc.yml
+++ b/cluster-config/src/main/resources/postgres/postgres-svc.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: db-postgres
-  namespace: default
+  namespace: @deployment.name@
 spec:
   clusterIP: None
   selector:
